Primera imagen, prueba de comentarios, pruebra de alinear txt y marcado de letra en negrita

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>PrimogenitaWeb</title>
   </head>
   <body>
+    <img src="img/FotoPerfil.png" alt="FotoPerfil" />
     <h1>Hello Wordl</h1>
-    <p class="importante">Esto es un parrafo</p>
+    <p class="importante">Esto es un párrafo</p>
+    <!-- Ejemplo de atributo dentro de la etiqueta de apertura -->
     <h2>Hola Mundo</h2>
+    <p>Mi gato es <strong>muy</strong> gruñón</p>
+    <!-- Esto es un comentario de prueba-->
+    <p ALIGN="right">Párrafo alineado a la izquierda</p>
+    <!-- Alineacion de elementos-->
   </body>
 </html>
