Prueba de css llamado por link en el head, resaltado de letras, icono, globo de referencia para adress contacto

--- a/index.html
+++ b/index.html
@@ -5,16 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PrimogenitaWeb</title>
+    <link rel="shortcut icon" href="img/sandia (3).ico" />
+    <!-- Poner icono con  etiqueta  link-->
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <img src="img/FotoPerfil.png" alt="FotoPerfil" />
-    <h1>Hello Wordl</h1>
+    <img src="img/ArgentinaPrograma.ico" alt="Icono ArgPrograma" /> <br />
+    <img src="img/FotoPerfil.png" alt="Foto Perfil" />
+    <h1>Guido H. Insfran Duarte</h1>
+    <address title="Contacto">
+      <!-- como un cuadro flotante con referencia-->
+      <a href="mailto:guidohid59@gmail.com">guidohid59@gmail.com</a> <br />
+      Ciudad Autonoma de Buenos Aires (Argentina) <br />
+      3764ejemplo
+    </address>
+
     <p class="importante">Esto es un párrafo</p>
     <!-- Ejemplo de atributo dentro de la etiqueta de apertura -->
     <h2>Hola Mundo</h2>
-    <p>Mi gato es <strong>muy</strong> gruñón</p>
-    <!-- Esto es un comentario de prueba-->
-    <p ALIGN="right">Párrafo alineado a la izquierda</p>
+    <p>Mi <i>gato</i> es <strong>muy</strong> gruñón</p>
+    <!-- Prueba de estilos letras-->
+    <p align="right">Párrafo alineado a la <b>izquierda</b></p>
     <!-- Alineacion de elementos-->
   </body>
 </html>
