Creando Header, navegador menu al pie, link para css, una etiqueta meta

--- a/index.html
+++ b/index.html
@@ -4,28 +4,55 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>PrimogenitaWeb</title>
+
     <link rel="shortcut icon" href="img/sandia (3).ico" />
     <!-- Poner icono con  etiqueta  link-->
-    <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="css/style.css" />
+
+    <meta
+      name="Guido H. Insfran Duarte"
+      content="Estudiante de Argentina Programa, cursando actualmente la etapa #YoProgramo ciclo 2022"
+    />
   </head>
+
   <body>
-    <img src="img/ArgentinaPrograma.ico" alt="Icono ArgPrograma" /> <br />
-    <img src="img/FotoPerfil.png" alt="Foto Perfil" />
-    <h1>Guido H. Insfran Duarte</h1>
-    <address title="Contacto">
-      <!-- como un cuadro flotante con referencia-->
-      <a href="mailto:guidohid59@gmail.com">guidohid59@gmail.com</a> <br />
-      Ciudad Autonoma de Buenos Aires (Argentina) <br />
-      3764ejemplo
-    </address>
+    <header>
+      <img src="img/ArgentinaPrograma.ico" alt="Icono ArgPrograma" /> <br />
+
+      <img src="img/FotoPerfil.png" alt="Foto Perfil" />
+
+      <h1>Guido H. Insfran Duarte</h1>
+      <h2 id="Acerca de">Acerca de</h2>
+      <h4>Full Stack Developer Jr</h4>
+      <address title="Contacto">
+        <!-- Como un cuadro flotante con referencia-->
+        <a href="mailto:guidohid59@gmail.com">guidohid59@gmail.com</a> <br />
+        Ciudad Autonoma de Buenos Aires (Argentina) <br />
+        3764ejemplo
+      </address>
+    </header>
+    <hr> <!-- linea divisoria-->
 
     <p class="importante">Esto es un párrafo</p>
     <!-- Ejemplo de atributo dentro de la etiqueta de apertura -->
+
     <h2>Hola Mundo</h2>
-    <p>Mi <i>gato</i> es <strong>muy</strong> gruñón</p>
+
+    <p>
+      Mi <i>gato</i> es <strong>muy</strong> <u>gruñón</u> cuando no
+      <strike>duerme</strike> come
+    </p>
     <!-- Prueba de estilos letras-->
+
     <p align="right">Párrafo alineado a la <b>izquierda</b></p>
     <!-- Alineacion de elementos-->
+    <div ALIGN="center">
+      <h4>Volver a</h4>
+      <a href="#Acerca de"> Header</a>
+      <!-- Pueba navegador-->
+    </div>
   </body>
 </html>
