Iframe para mapa, texto tipo corienew, tipos de listas

--- a/index.html
+++ b/index.html
@@ -16,16 +16,23 @@
       name="Guido H. Insfran Duarte"
       content="Estudiante de Argentina Programa, cursando actualmente la etapa #YoProgramo ciclo 2022"
     />
+
+    <meta http-equiv="refresh" content="600" />
   </head>
 
   <body>
     <header>
-      <img src="img/ArgentinaPrograma.ico" alt="Icono ArgPrograma" /> <br />
+      <img
+        id="IconoArgPrograma"
+        src="img/ArgentinaPrograma.ico"
+        alt="Icono ArgPrograma"
+      />
+      <br />
 
       <img src="img/FotoPerfil.png" alt="Foto Perfil" />
 
       <h1>Guido H. Insfran Duarte</h1>
-      <h2 id="Acerca de">Acerca de</h2>
+      <h2>Acerca de</h2>
       <h4>Full Stack Developer Jr</h4>
       <address title="Contacto">
         <!-- Como un cuadro flotante con referencia-->
@@ -34,13 +41,14 @@
         3764ejemplo
       </address>
     </header>
-    <hr> <!-- linea divisoria-->
+    <hr />
+    <!-- linea divisoria-->
 
     <p class="importante">Esto es un párrafo</p>
     <!-- Ejemplo de atributo dentro de la etiqueta de apertura -->
 
     <h2>Hola Mundo</h2>
-
+    
     <p>
       Mi <i>gato</i> es <strong>muy</strong> <u>gruñón</u> cuando no
       <strike>duerme</strike> come
@@ -49,10 +57,36 @@
 
     <p align="right">Párrafo alineado a la <b>izquierda</b></p>
     <!-- Alineacion de elementos-->
-    <div ALIGN="center">
-      <h4>Volver a</h4>
-      <a href="#Acerca de"> Header</a>
-      <!-- Pueba navegador-->
+
+    <p>
+      <tt
+        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, iure
+        laboriosam dolores tempora, sed dolorum voluptatem soluta illum
+        voluptatibus, non ea? In quis incidunt blanditiis sapiente rem
+        cupiditate porro voluptate?</tt
+      >
+    </p>
+    <!-- Texto monoespaciado como corrienew-->
+
+    <ol type="a">
+      <li>Fernando</li>
+      <li>Luis</li>
+      <li>Matilde</li>
+      <li>Pancho</li>
+    </ol>
+    <!-- Lista alfabetizada-->
+
+    <section align="center">
+      <iframe src="https://www.google.com/maps/place/Buenos+Aires,+CABA/@-34.6154607,-58.573725,11z/data=!3m1!4b1!4m5!3m4!1s0x95bcca3b4ef90cbd:0xa0b3812e88e88e87!8m2!3d-34.6036844!4d-58.3815591" width="60%" height="600"
+    frameborder="0"></iframe>
+    </section>
+
+    <div align="center">
+      <h4>Ir a</h4>
+        <a href="#IconoArgPrograma"> Header</a> <br>
+        <a href="https://www.google.com/" target="blank">Google</a>
+      <!-- Pueba navegador, el link de Google abre en nueva ventana-->
     </div>
+
   </body>
 </html>
