--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
     <p class="importante">Esto es un párrafo</p>
     <!-- Ejemplo de atributo dentro de la etiqueta de apertura -->
 
-    <h2>Hola Mundo</h2>
-    
-    <p>
-      Mi <i>gato</i> es <strong>muy</strong> <u>gruñón</u> cuando no
-      <strike>duerme</strike> come
-    </p>
+    <article>
+      <p>
+        Mi <i>gato</i> es <strong>muy</strong> <u>gruñón</u> cuando no
+        <strike>duerme</strike> come
+      </p>
+      <footer>
+        <small>Reservado el texto como ejemplo para esta página</small>
+      </footer>
+    </article>
     <!-- Prueba de estilos letras-->
 
     <p align="right">Párrafo alineado a la <b>izquierda</b></p>
@@ -77,16 +80,20 @@
     <!-- Lista alfabetizada-->
 
     <section align="center">
-      <iframe src="https://www.google.com/maps/place/Buenos+Aires,+CABA/@-34.6154607,-58.573725,11z/data=!3m1!4b1!4m5!3m4!1s0x95bcca3b4ef90cbd:0xa0b3812e88e88e87!8m2!3d-34.6036844!4d-58.3815591" width="60%" height="600"
-    frameborder="0"></iframe>
+      <h3>Area de trabajo</h3>
+      <iframe
+        src="https://www.google.com/maps/place/Buenos+Aires,+CABA/@-34.6154607,-58.573725,11z/data=!3m1!4b1!4m5!3m4!1s0x95bcca3b4ef90cbd:0xa0b3812e88e88e87!8m2!3d-34.6036844!4d-58.3815591"
+        width="60%"
+        height="600"
+        frameborder="0"
+      ></iframe>
     </section>
 
     <div align="center">
       <h4>Ir a</h4>
-        <a href="#IconoArgPrograma"> Header</a> <br>
-        <a href="https://www.google.com/" target="blank">Google</a>
+      <a href="#IconoArgPrograma"> Header</a> <br />
+      <a href="https://www.google.com/" target="blank">Google</a>
       <!-- Pueba navegador, el link de Google abre en nueva ventana-->
     </div>
-
   </body>
 </html>
