Division por secciones

--- a/index.html
+++ b/index.html
@@ -44,40 +44,44 @@
     <hr />
     <!-- linea divisoria-->
 
-    <p class="importante">Esto es un párrafo</p>
-    <!-- Ejemplo de atributo dentro de la etiqueta de apertura -->
+    <section>
+      <h3>Pruebas</h3>
 
-    <article>
+      <p class="importante">Esto es un párrafo</p>
+      <!-- Ejemplo de atributo dentro de la etiqueta de apertura -->
+  
+      <article>
+        <p>
+          Mi <i>gato</i> es <strong>muy</strong> <u>gruñón</u> cuando no
+          <strike>duerme</strike> come
+        </p>
+        <footer>
+          <small>Reservado el texto como ejemplo para esta página</small>
+        </footer>
+      </article>
+      <!-- Prueba de estilos letras-->
+  
+      <p align="right">Párrafo alineado a la <b>izquierda</b></p>
+      <!-- Alineacion de elementos-->
+  
       <p>
-        Mi <i>gato</i> es <strong>muy</strong> <u>gruñón</u> cuando no
-        <strike>duerme</strike> come
+        <tt
+          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, iure
+          laboriosam dolores tempora, sed dolorum voluptatem soluta illum
+          voluptatibus, non ea? In quis incidunt blanditiis sapiente rem
+          cupiditate porro voluptate?</tt
+        >
       </p>
-      <footer>
-        <small>Reservado el texto como ejemplo para esta página</small>
-      </footer>
-    </article>
-    <!-- Prueba de estilos letras-->
-
-    <p align="right">Párrafo alineado a la <b>izquierda</b></p>
-    <!-- Alineacion de elementos-->
-
-    <p>
-      <tt
-        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, iure
-        laboriosam dolores tempora, sed dolorum voluptatem soluta illum
-        voluptatibus, non ea? In quis incidunt blanditiis sapiente rem
-        cupiditate porro voluptate?</tt
-      >
-    </p>
-    <!-- Texto monoespaciado como corrienew-->
-
-    <ol type="a">
-      <li>Fernando</li>
-      <li>Luis</li>
-      <li>Matilde</li>
-      <li>Pancho</li>
-    </ol>
-    <!-- Lista alfabetizada-->
+      <!-- Texto monoespaciado como corrienew-->
+  
+      <ol type="a">
+        <li>Fernando</li>
+        <li>Luis</li>
+        <li>Matilde</li>
+        <li>Pancho</li>
+      </ol>
+      <!-- Lista alfabetizada-->
+    </section> <hr>
 
     <section align="center">
       <h3>Area de trabajo</h3>
