--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
     <section align="center">
       <h3>Area de trabajo</h3>
       <iframe
-        src="https://www.google.com/maps/place/Buenos+Aires,+CABA/@-34.6154607,-58.573725,11z/data=!3m1!4b1!4m5!3m4!1s0x95bcca3b4ef90cbd:0xa0b3812e88e88e87!8m2!3d-34.6036844!4d-58.3815591"
+        src="https://www.google.com/maps/place/Retiro,+CABA/@-34.5893799,-58.3855645,15z/data=!3m1!4b1!4m5!3m4!1s0x95bccab6fb9fda31:0xc63b4bf37c945929!8m2!3d-34.5896061!4d-58.3802473"
         width="60%"
         height="600"
         frameborder="0"
       ></iframe>
+      <footer><a href="https://www.google.com/maps/place/Retiro,+CABA/@-34.5893799,-58.3855645,15z/data=!3m1!4b1!4m5!3m4!1s0x95bccab6fb9fda31:0xc63b4bf37c945929!8m2!3d-34.5896061!4d-58.3802473"> <small>Abrir en Google Maps</small></a></footer>
     </section>
 
     <div align="center">
