--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         height="600"
         frameborder="0"
       ></iframe>
-      <footer><a href="https://www.google.com/maps/place/Retiro,+CABA/@-34.5893799,-58.3855645,15z/data=!3m1!4b1!4m5!3m4!1s0x95bccab6fb9fda31:0xc63b4bf37c945929!8m2!3d-34.5896061!4d-58.3802473"> <small>Abrir en Google Maps</small></a></footer>
+      <footer><a href="https://www.google.com/maps/place/Retiro,+CABA/@-34.5893799,-58.3855645,15z/data=!3m1!4b1!4m5!3m4!1s0x95bccab6fb9fda31:0xc63b4bf37c945929!8m2!3d-34.5896061!4d-58.3802473" target="blank"> <small>Abrir en Google Maps</small></a></footer>
     </section>
 
     <div align="center">
