--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
     <title>PrimogenitaWeb</title>
 
-    <link rel="shortcut icon" href="img/sandia (3).ico" />
+    <link rel="shortcut icon" href="ico/sandia (3).ico" />
     <!-- Poner icono con  etiqueta  link-->
 
     <link rel="stylesheet" href="css/style.css" />
 
     <meta
       name="Guido H. Insfran Duarte"
-      content="Estudiante de Argentina Programa, cursando actualmente la etapa #YoProgramo ciclo 2022"
+      content="Estudiante de Argentina Programa, cursando actualmente la etapa #YoProgramo ciclo 2022, para alcanzar certificacion en Full Stack Developer"
     />
 
     <meta http-equiv="refresh" content="600" />
@@ -29,27 +29,41 @@
       />
       <br />
 
-      <img src="img/FotoPerfil.png" alt="Foto Perfil" />
+      <div>
+        <!--Redes sociales-->
+        <a href="https://www.instagram.com/guidohid/" target="blank"
+          ><img src="ico/instagram.ico" alt="Icono Instagram" width="6%"
+          height="45"/>
+        </a
+        ><!--Icono en vez del nombre-->
+      </div>
+      <br />
 
-      <h1>Guido H. Insfran Duarte</h1>
-      <h2>Acerca de</h2>
-      <h4>Full Stack Developer Jr</h4>
-      <address title="Contacto">
-        <!-- Como un cuadro flotante con referencia-->
-        <a href="mailto:guidohid59@gmail.com">guidohid59@gmail.com</a> <br />
-        Ciudad Autonoma de Buenos Aires (Argentina) <br />
-        3764ejemplo
-      </address>
+      <div>
+        <!--Perfil-->
+        <img src="img/FotoPerfil.png" alt="Foto Perfil" />
+
+        <h2>Guido H. Insfran Duarte</h2>
+        <h4>Full Stack Developer Jr (Estudiante)</h4>
+
+        <address title="Contacto">
+          <!--Refereencia en viñeta-->
+          <a href="mailto:guidohid59@gmail.com" target="blank"><img src="ico/email.ico" alt="Icono Email" width="6%"
+            height="45"> guidohid59@gmail.com</a> <br />
+          Ciudad Autonoma de Buenos Aires (Argentina) <br />
+          <img src="ico/telegram.ico" alt="Icono Telegram" width="6%"
+          height="45"> 376-4-771317
+        </address>
+      </div>
     </header>
     <hr />
     <!-- linea divisoria-->
 
-    <section>
-      <h3>Pruebas</h3>
-
+    <div>
+      <h3>Acerca de</h3>
       <p class="importante">Esto es un párrafo</p>
       <!-- Ejemplo de atributo dentro de la etiqueta de apertura -->
-  
+
       <article>
         <p>
           Mi <i>gato</i> es <strong>muy</strong> <u>gruñón</u> cuando no
@@ -60,20 +74,20 @@
         </footer>
       </article>
       <!-- Prueba de estilos letras-->
-  
+
       <p align="right">Párrafo alineado a la <b>izquierda</b></p>
       <!-- Alineacion de elementos-->
-  
+
       <p>
         <tt
-          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, iure
-          laboriosam dolores tempora, sed dolorum voluptatem soluta illum
+          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+          iure laboriosam dolores tempora, sed dolorum voluptatem soluta illum
           voluptatibus, non ea? In quis incidunt blanditiis sapiente rem
           cupiditate porro voluptate?</tt
         >
       </p>
       <!-- Texto monoespaciado como corrienew-->
-  
+
       <ol type="a">
         <li>Fernando</li>
         <li>Luis</li>
@@ -81,9 +95,10 @@
         <li>Pancho</li>
       </ol>
       <!-- Lista alfabetizada-->
-    </section> <hr>
+    </div>
+    <hr />
 
-    <section align="center">
+    <div align="center">
       <h3>Area de trabajo</h3>
       <iframe
         src="https://www.google.com/maps/place/Retiro,+CABA/@-34.5893799,-58.3855645,15z/data=!3m1!4b1!4m5!3m4!1s0x95bccab6fb9fda31:0xc63b4bf37c945929!8m2!3d-34.5896061!4d-58.3802473"
@@ -91,12 +106,19 @@
         height="600"
         frameborder="0"
       ></iframe>
-      <footer><a href="https://www.google.com/maps/place/Retiro,+CABA/@-34.5893799,-58.3855645,15z/data=!3m1!4b1!4m5!3m4!1s0x95bccab6fb9fda31:0xc63b4bf37c945929!8m2!3d-34.5896061!4d-58.3802473" target="blank"> <small>Abrir en Google Maps</small></a></footer>
-    </section>
+      <footer>
+        <a
+          href="https://www.google.com/maps/place/Retiro,+CABA/@-34.5893799,-58.3855645,15z/data=!3m1!4b1!4m5!3m4!1s0x95bccab6fb9fda31:0xc63b4bf37c945929!8m2!3d-34.5896061!4d-58.3802473"
+          target="blank"
+        >
+          <small>Abrir en Google Maps</small></a
+        >
+      </footer>
+    </div>
 
     <div align="center">
       <h4>Ir a</h4>
-      <a href="#IconoArgPrograma"> Header</a> <br />
+      <a href="#IconoArgPrograma"> Inicio</a> <br />
       <a href="https://www.google.com/" target="blank">Google</a>
       <!-- Pueba navegador, el link de Google abre en nueva ventana-->
     </div>
