Acerca de y Experiencia

--- a/index.html
+++ b/index.html
@@ -32,70 +32,100 @@
       <div>
         <!--Redes sociales-->
         <a href="https://www.instagram.com/guidohid/" target="blank"
-          ><img src="ico/instagram.ico" alt="Icono Instagram" width="6%"
-          height="45"/>
-        </a
+          ><img
+            src="ico/instagram.ico"
+            alt="Icono Instagram"
+            width="50"
+            height="45"
+          /> </a
         ><!--Icono en vez del nombre-->
       </div>
       <br />
-
-      <div>
-        <!--Perfil-->
-        <img src="img/FotoPerfil.png" alt="Foto Perfil" />
-
-        <h2>Guido H. Insfran Duarte</h2>
-        <h4>Full Stack Developer Jr (Estudiante)</h4>
-
-        <address title="Contacto">
-          <!--Refereencia en viñeta-->
-          <a href="mailto:guidohid59@gmail.com" target="blank"><img src="ico/email.ico" alt="Icono Email" width="6%"
-            height="45"> guidohid59@gmail.com</a> <br />
-          Ciudad Autonoma de Buenos Aires (Argentina) <br />
-          <img src="ico/telegram.ico" alt="Icono Telegram" width="6%"
-          height="45"> 376-4-771317
-        </address>
-      </div>
     </header>
     <hr />
     <!-- linea divisoria-->
 
     <div>
+      <!--Perfil-->
+      <img src="img/FotoPerfil.png" alt="Foto Perfil" />
+
+      <h2>Guido H. Insfran Duarte</h2>
+      <h4>Full Stack Developer Jr (Estudiante)</h4>
+
+      <address title="Contacto">
+        <!--Refereencia en viñeta-->
+        <a href="mailto:guidohid59@gmail.com" target="blank"
+          ><img src="ico/email.ico" alt="Icono Email" width="50" height="45" />
+          guidohid59@gmail.com</a
+        >
+        <br />
+        <img
+          src="ico/periscope.ico"
+          alt="Icono ubicacion"
+          width="50"
+          height="45"
+        />
+        Ciudad Autonoma de Buenos Aires (Argentina) <br />
+        <img
+          src="ico/telegram.ico"
+          alt="Icono Telegram"
+          width="50"
+          height="45"
+        />
+        376-4-771317
+      </address>
+    </div>
+
+    <div>
       <h3>Acerca de</h3>
-      <p class="importante">Esto es un párrafo</p>
-      <!-- Ejemplo de atributo dentro de la etiqueta de apertura -->
-
-      <article>
-        <p>
-          Mi <i>gato</i> es <strong>muy</strong> <u>gruñón</u> cuando no
-          <strike>duerme</strike> come
-        </p>
-        <footer>
-          <small>Reservado el texto como ejemplo para esta página</small>
-        </footer>
-      </article>
-      <!-- Prueba de estilos letras-->
-
-      <p align="right">Párrafo alineado a la <b>izquierda</b></p>
-      <!-- Alineacion de elementos-->
-
-      <p>
-        <tt
-          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
-          iure laboriosam dolores tempora, sed dolorum voluptatem soluta illum
-          voluptatibus, non ea? In quis incidunt blanditiis sapiente rem
-          cupiditate porro voluptate?</tt
+      <p class="importante">
+        <em
+          >Licenciado en Seguridad Pública, actividad de Análisis Criminal en
+          Fuerza de Seguridad para el ámbito de la Seguridad Interior</em
         >
       </p>
-      <!-- Texto monoespaciado como corrienew-->
-
-      <ol type="a">
-        <li>Fernando</li>
-        <li>Luis</li>
-        <li>Matilde</li>
-        <li>Pancho</li>
-      </ol>
-      <!-- Lista alfabetizada-->
     </div>
+
+    <div>
+      <h3>Experiencia</h3>
+      <p>
+        <img src="ico/GN.ico" alt="Icono GN" width="100" height="50"> <br>
+        <b>Gendarmeria Nacional</b> <br>
+        Analista Criminal <br>
+        (OSINT - SOCMINT) <br>
+        6 años hasta la actualidad 
+      </p>
+    </div>
+    <article>
+      Mi <i>gato</i> es <strong>muy</strong> <u>gruñón</u> cuando no
+      <strike>duerme</strike> come
+      <footer>
+        <small>Reservado el texto como ejemplo para esta página</small>
+      </footer>
+    </article>
+    <!-- Prueba de estilos letras-->
+
+    <p align="right">Párrafo alineado a la <b>izquierda</b></p>
+    <!-- Alineacion de elementos-->
+
+    <p>
+      <tt
+        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, iure
+        laboriosam dolores tempora, sed dolorum voluptatem soluta illum
+        voluptatibus, non ea? In quis incidunt blanditiis sapiente rem
+        cupiditate porro voluptate?</tt
+      >
+    </p>
+    <!-- Texto monoespaciado como corrienew-->
+
+    <ol type="a">
+      <li>Fernando</li>
+      <li>Luis</li>
+      <li>Matilde</li>
+      <li>Pancho</li>
+    </ol>
+    <!-- Lista alfabetizada-->
+
     <hr />
 
     <div align="center">
