--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     />
 
     <meta http-equiv="refresh" content="600" />
+
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
@@ -29,7 +31,7 @@
       />
       <br />
 
-      <div>
+      <div align="right">
         <!--Redes sociales-->
         <a href="https://www.instagram.com/guidohid/" target="blank"
           ><img
@@ -59,13 +61,16 @@
           guidohid59@gmail.com</a
         >
         <br />
-        <img
-          src="ico/periscope.ico"
-          alt="Icono ubicacion"
-          width="50"
-          height="45"
-        />
-        Ciudad Autonoma de Buenos Aires (Argentina) <br />
+        <a href="#Mapa">
+          <img
+            src="ico/periscope.ico"
+            alt="Icono ubicacion"
+            width="50"
+            height="45"
+          />
+          Ciudad Autonoma de Buenos Aires (Argentina)
+        </a>
+        <br />
         <img
           src="ico/telegram.ico"
           alt="Icono Telegram"
@@ -89,13 +94,30 @@
     <div>
       <h3>Experiencia</h3>
       <p>
-        <img src="ico/GN.ico" alt="Icono GN" width="100" height="50"> <br>
-        <b>Gendarmeria Nacional</b> <br>
-        Analista Criminal <br>
-        (OSINT - SOCMINT) <br>
-        6 años hasta la actualidad 
+        <img src="ico/GN.ico" alt="Icono GN" width="100" height="50" /> <br />
+        <b>Gendarmeria Nacional</b> <br />
+        Analista Criminal <br />
+        (OSINT - SOCMINT) <br />
+        10 años de carrera
       </p>
     </div>
+
+    <div>
+      <h3>Estudios</h3>
+      <ul>
+        <h4>Estudios Secundarios</h4>
+        <li>Técnico medio en equipos e instalaciones electromecánicas - E.P.E.T. Nro. 12, 2009, Misiones</li>
+        <h4>Estudios Tercarios</h4>
+        <li>Técnico Universitario en Seguridad Pública - <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a>, 2015, Buenos Aires</li>
+        <h4>Estudios de Grado</h4>
+        <li>Licenciado en Seguridad Pública - <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a>, 2019, Buenos Aires</li>
+        <li>Cursando último año de Licenciatura en Investigacion Judicial - <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a>, Buenos Aires</li>
+        <h4>Capacitaciones</h4>
+        <li>Primera etapa de Argentina Programa: <a href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento/argentina-programa" target="blank"> #SéProgramar</a></li>
+      </ul>
+      <iframe src="docs/argentina_programa_agosto_octubre_2021.pdf" frameborder="0"></iframe>
+    </div>
+
     <article>
       Mi <i>gato</i> es <strong>muy</strong> <u>gruñón</u> cuando no
       <strike>duerme</strike> come
@@ -131,6 +153,7 @@
     <div align="center">
       <h3>Area de trabajo</h3>
       <iframe
+        id="Mapa"
         src="https://www.google.com/maps/place/Retiro,+CABA/@-34.5893799,-58.3855645,15z/data=!3m1!4b1!4m5!3m4!1s0x95bccab6fb9fda31:0xc63b4bf37c945929!8m2!3d-34.5896061!4d-58.3802473"
         width="60%"
         height="600"
