Banner y primer css (para banner)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>PrimogenitaWeb</title>
+
+    <!--Banner-->
+    <link rel="stylesheet" href="css/style.css" />
 
     <link rel="shortcut icon" href="ico/sandia (3).ico" />
     <!-- Poner icono con  etiqueta  link-->
@@ -19,16 +22,23 @@
 
     <meta http-equiv="refresh" content="600" />
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <header>
-      <img
-        id="IconoArgPrograma"
-        src="img/ArgentinaPrograma.ico"
-        alt="Icono ArgPrograma"
-      />
+      <div>
+        <!--Logo ArgPrograma-->
+        <a
+          href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento/argentina-programa"
+          target="blank"
+        >
+          <img
+            id="iconoArgPrograma"
+            src="img/ArgentinaPrograma.ico"
+            alt="Icono ArgPrograma"
+        /></a>
+      </div>
       <br />
 
       <div align="right">
@@ -42,9 +52,13 @@
           /> </a
         ><!--Icono en vez del nombre-->
       </div>
+      <div id="banner">
+        <img src="img/Banner2.png" alt="Banner" id="img_banner">
+      </div>
+
       <br />
     </header>
-    <hr />
+    
     <!-- linea divisoria-->
 
     <div>
@@ -106,52 +120,50 @@
       <h3>Estudios</h3>
       <ul>
         <h4>Estudios Secundarios</h4>
-        <li>Técnico medio en equipos e instalaciones electromecánicas - E.P.E.T. Nro. 12, 2009, Misiones</li>
+        <li>
+          Técnico medio en equipos e instalaciones electromecánicas - E.P.E.T.
+          Nro. 12, 2009, Misiones
+        </li>
         <h4>Estudios Tercarios</h4>
-        <li>Técnico Universitario en Seguridad Pública - <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a>, 2015, Buenos Aires</li>
+        <li>
+          Técnico Universitario en Seguridad Pública -
+          <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a
+          >, 2015, Buenos Aires
+        </li>
         <h4>Estudios de Grado</h4>
-        <li>Licenciado en Seguridad Pública - <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a>, 2019, Buenos Aires</li>
-        <li>Cursando último año de Licenciatura en Investigacion Judicial - <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a>, Buenos Aires</li>
+        <li>
+          Licenciado en Seguridad Pública -
+          <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a
+          >, 2019, Buenos Aires
+        </li>
+        <li>
+          Cursando último año de Licenciatura en Investigacion Judicial -
+          <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a
+          >, Buenos Aires
+        </li>
         <h4>Capacitaciones</h4>
-        <li>Primera etapa de Argentina Programa: <a href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento/argentina-programa" target="blank"> #SéProgramar</a></li>
+        <li>
+          Primera etapa de
+          <a
+            href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento/argentina-programa"
+            target="blank"
+          >
+            Argentina Programa:</a
+          >
+          #SéProgramar
+          <a
+            href="https://drive.google.com/file/d/1L8oN0qjh5G_UhtRmwqG1QtFzZCR3NVVs/view?usp=sharing"
+            target="blank"
+            >(Certificado)</a
+          >
+        </li>
       </ul>
-      <iframe src="docs/argentina_programa_agosto_octubre_2021.pdf" frameborder="0"></iframe>
     </div>
-
-    <article>
-      Mi <i>gato</i> es <strong>muy</strong> <u>gruñón</u> cuando no
-      <strike>duerme</strike> come
-      <footer>
-        <small>Reservado el texto como ejemplo para esta página</small>
-      </footer>
-    </article>
-    <!-- Prueba de estilos letras-->
-
-    <p align="right">Párrafo alineado a la <b>izquierda</b></p>
-    <!-- Alineacion de elementos-->
-
-    <p>
-      <tt
-        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, iure
-        laboriosam dolores tempora, sed dolorum voluptatem soluta illum
-        voluptatibus, non ea? In quis incidunt blanditiis sapiente rem
-        cupiditate porro voluptate?</tt
-      >
-    </p>
-    <!-- Texto monoespaciado como corrienew-->
-
-    <ol type="a">
-      <li>Fernando</li>
-      <li>Luis</li>
-      <li>Matilde</li>
-      <li>Pancho</li>
-    </ol>
-    <!-- Lista alfabetizada-->
 
     <hr />
 
     <div align="center">
-      <h3>Area de trabajo</h3>
+      <h3>Sitio de trabajo</h3>
       <iframe
         id="Mapa"
         src="https://www.google.com/maps/place/Retiro,+CABA/@-34.5893799,-58.3855645,15z/data=!3m1!4b1!4m5!3m4!1s0x95bccab6fb9fda31:0xc63b4bf37c945929!8m2!3d-34.5896061!4d-58.3802473"
@@ -171,7 +183,7 @@
 
     <div align="center">
       <h4>Ir a</h4>
-      <a href="#IconoArgPrograma"> Inicio</a> <br />
+      <a href="#iconoArgPrograma"> Inicio</a> <br />
       <a href="https://www.google.com/" target="blank">Google</a>
       <!-- Pueba navegador, el link de Google abre en nueva ventana-->
     </div>
