--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
         ><!--Icono en vez del nombre-->
       </div>
       <div id="banner">
-        <img src="img/Banner2.png" alt="Banner" id="img_banner">
+        <img src="img/Banner2.png" alt="Banner" id="img_banner" />
       </div>
 
       <br />
     </header>
-    
+
     <!-- linea divisoria-->
 
     <div>
@@ -94,9 +94,12 @@
         376-4-771317
       </address>
     </div>
+    <br />
+    <br />
 
     <div>
       <h3>Acerca de</h3>
+      <br />
       <p class="importante">
         <em
           >Licenciado en Seguridad Pública, actividad de Análisis Criminal en
@@ -104,9 +107,12 @@
         >
       </p>
     </div>
+    <br />
+    <br />
 
     <div>
       <h3>Experiencia</h3>
+      <br />
       <p>
         <img src="ico/GN.ico" alt="Icono GN" width="100" height="50" /> <br />
         <b>Gendarmeria Nacional</b> <br />
@@ -115,21 +121,27 @@
         10 años de carrera
       </p>
     </div>
+    <br /><br />
 
     <div>
       <h3>Estudios</h3>
+      <br />
       <ul>
         <h4>Estudios Secundarios</h4>
         <li>
           Técnico medio en equipos e instalaciones electromecánicas - E.P.E.T.
           Nro. 12, 2009, Misiones
         </li>
+        <br />
+
         <h4>Estudios Tercarios</h4>
         <li>
           Técnico Universitario en Seguridad Pública -
           <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a
           >, 2015, Buenos Aires
         </li>
+        <br />
+
         <h4>Estudios de Grado</h4>
         <li>
           Licenciado en Seguridad Pública -
@@ -141,6 +153,8 @@
           <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a
           >, Buenos Aires
         </li>
+        <br />
+
         <h4>Capacitaciones</h4>
         <li>
           Primera etapa de
@@ -158,9 +172,7 @@
           >
         </li>
       </ul>
-    </div>
-
-    <hr />
+    </div> <br>
 
     <div align="center">
       <h3>Sitio de trabajo</h3>
