--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         >
           <small>Abrir en Google Maps</small></a
         >
-      </footer>
+      </footer> <br>
     </div>
 
     <div align="center">
