Probando CSS para iconos

--- a/index.html
+++ b/index.html
@@ -42,16 +42,21 @@
       <br />
 
       <div align="right">
-        <!--Redes sociales-->
+        <!--Redes sociales--><!--Icono en vez del nombre-->
         <a href="https://www.instagram.com/guidohid/" target="blank"
           ><img
             src="ico/instagram.ico"
             alt="Icono Instagram"
-            width="50"
-            height="45"
-          /> </a
-        ><!--Icono en vez del nombre-->
+            id="icono"
+          /> </a>
+        <a href="https://www.facebook.com/guido.insfran.7/" target="blank" 
+          ><img
+            src="ico/facebook.ico"
+            alt="Icono Facebook"
+            id="icono"
+        /></a>
       </div>
+
       <div id="banner">
         <img src="img/Banner2.png" alt="Banner" id="img_banner" />
       </div>
@@ -59,19 +64,32 @@
       <br />
     </header>
 
-    <!-- linea divisoria-->
+    <div> <!--Pruebas Css-->
+      <p >
+        prueba estilo <span class="aviso error">aviso</span></p>
+      <p id="cssPorId">
+        prueba estilo por id
+      </p>
 
-    <div>
-      <!--Perfil-->
+    </div>
+
+    <div class="error">
+      <p>
+        prueba estilo error
+      </p>
+    </div>
+
+    <div class="sangria"> <!--Perfil-->
       <img src="img/FotoPerfil.png" alt="Foto Perfil" />
 
-      <h2>Guido H. Insfran Duarte</h2>
+      <h2>Guido H. Insfran Duarte</h2ss=>
       <h4>Full Stack Developer Jr (Estudiante)</h4>
 
       <address title="Contacto">
         <!--Refereencia en viñeta-->
         <a href="mailto:guidohid59@gmail.com" target="blank"
-          ><img src="ico/email.ico" alt="Icono Email" width="50" height="45" />
+          ><img src="ico/email.ico" alt="Icono Email"
+          id="icono"/>
           guidohid59@gmail.com</a
         >
         <br />
@@ -79,8 +97,7 @@
           <img
             src="ico/periscope.ico"
             alt="Icono ubicacion"
-            width="50"
-            height="45"
+            id="icono"
           />
           Ciudad Autonoma de Buenos Aires (Argentina)
         </a>
@@ -88,8 +105,7 @@
         <img
           src="ico/telegram.ico"
           alt="Icono Telegram"
-          width="50"
-          height="45"
+          id="icono"
         />
         376-4-771317
       </address>
@@ -97,7 +113,7 @@
     <br />
     <br />
 
-    <div>
+    <div class="sangriaGrande">
       <h3>Acerca de</h3>
       <br />
       <p class="importante">
@@ -110,7 +126,7 @@
     <br />
     <br />
 
-    <div>
+    <div class="sangriaGrande">
       <h3>Experiencia</h3>
       <br />
       <p>
@@ -123,13 +139,13 @@
     </div>
     <br /><br />
 
-    <div>
+    <div class="sangriaGrande">
       <h3>Estudios</h3>
       <br />
       <ul>
         <h4>Estudios Secundarios</h4>
         <li>
-          Técnico medio en equipos e instalaciones electromecánicas - E.P.E.T.
+          Técnico Medio en Equipos e Instalaciones Electromecánicas - E.P.E.T.
           Nro. 12, 2009, Misiones
         </li>
         <br />
@@ -172,15 +188,16 @@
           >
         </li>
       </ul>
-    </div> <br>
+    </div>
+    <br />
 
     <div align="center">
-      <h3>Sitio de trabajo</h3>
+      <h3>Sitio de trabajo</h3> <br>
       <iframe
         id="Mapa"
         src="https://www.google.com/maps/place/Retiro,+CABA/@-34.5893799,-58.3855645,15z/data=!3m1!4b1!4m5!3m4!1s0x95bccab6fb9fda31:0xc63b4bf37c945929!8m2!3d-34.5896061!4d-58.3802473"
-        width="60%"
-        height="600"
+        width="40%"
+        height="60"
         frameborder="0"
       ></iframe>
       <footer>
@@ -190,7 +207,8 @@
         >
           <small>Abrir en Google Maps</small></a
         >
-      </footer> <br>
+      </footer>
+      <br />
     </div>
 
     <div align="center">
