--- a/index.html
+++ b/index.html
@@ -39,76 +39,70 @@
             alt="Icono ArgPrograma"
         /></a>
       </div>
-      <br />
+      
 
-      <div align="right">
+      <div>
         <!--Redes sociales--><!--Icono en vez del nombre-->
         <a href="https://www.instagram.com/guidohid/" target="blank"
           ><img
             src="ico/instagram.ico"
             alt="Icono Instagram"
-            id="icono"
+            id="iconoInstagram"
           /> </a>
         <a href="https://www.facebook.com/guido.insfran.7/" target="blank" 
           ><img
             src="ico/facebook.ico"
             alt="Icono Facebook"
-            id="icono"
-        /></a>
+            id="iconoFacebook"
+          /></a>
+      </div>
+
+      <div id="login">
+        <span>Login</span>
+        
       </div>
 
       <div id="banner">
         <img src="img/Banner2.png" alt="Banner" id="img_banner" />
       </div>
-
-      <br />
     </header>
 
-    <div> <!--Pruebas Css-->
-      <p >
-        prueba estilo <span class="aviso error">aviso</span></p>
-      <p id="cssPorId">
-        prueba estilo por id
-      </p>
+    <div> <!--Perfil-->
+      <section>
+        <img src="img/FotoPerfil.png" 
+        alt="Foto Perfil"
+        id="fotoPerfil"/>
+      </section>
 
-    </div>
-
-    <div class="error">
-      <p>
-        prueba estilo error
-      </p>
-    </div>
-
-    <div class="sangria"> <!--Perfil-->
-      <img src="img/FotoPerfil.png" alt="Foto Perfil" />
-
-      <h2>Guido H. Insfran Duarte</h2ss=>
-      <h4>Full Stack Developer Jr (Estudiante)</h4>
-
-      <address title="Contacto">
-        <!--Refereencia en viñeta-->
-        <a href="mailto:guidohid59@gmail.com" target="blank"
-          ><img src="ico/email.ico" alt="Icono Email"
-          id="icono"/>
-          guidohid59@gmail.com</a
-        >
-        <br />
-        <a href="#Mapa">
+      <section class="sangria">
+        <h2>Guido H. Insfran Duarte</h2ss=>
+        <h4>Full Stack Developer Jr (Estudiante)</h4>
+  
+        <address title="Contacto">
+          <!--Refereencia en viñeta-->
+          <a href="mailto:guidohid59@gmail.com" target="blank"
+            ><img src="ico/email.ico" alt="Icono Email"
+            id="icono"/>
+            guidohid59@gmail.com</a
+          >
+          <br />
+          <a href="#Mapa">
+            <img
+              src="ico/periscope.ico"
+              alt="Icono ubicacion"
+              id="icono"
+            />
+            Ciudad Autonoma de Buenos Aires (Argentina)
+          </a>
+          <br />
           <img
-            src="ico/periscope.ico"
-            alt="Icono ubicacion"
+            src="ico/telegram.ico"
+            alt="Icono Telegram"
             id="icono"
           />
-          Ciudad Autonoma de Buenos Aires (Argentina)
-        </a>
-        <br />
-        <img
-          src="ico/telegram.ico"
-          alt="Icono Telegram"
-          id="icono"
-        />
-        376-4-771317
-      </address>
+          376-4-771317
+        </address>
+      </section>
     </div>
     <br />
     <br />
@@ -130,7 +124,7 @@
       <h3>Experiencia</h3>
       <br />
       <p>
-        <img src="ico/GN.ico" alt="Icono GN" width="100" height="50" /> <br />
+        <img src="ico/GN.ico" alt="Icono GN" id="logoGN"/> <br />
         <b>Gendarmeria Nacional</b> <br />
         Analista Criminal <br />
         (OSINT - SOCMINT) <br />
