Formulario contacto, iconos con efecto, fondo negro, contruyendo menu

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
 
     <link rel="stylesheet" href="css/style.css" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+
     <meta
-      name="Guido H. Insfran Duarte"
-      content="Estudiante de Argentina Programa, cursando actualmente la etapa #YoProgramo ciclo 2022, para alcanzar certificacion en Full Stack Developer"
-    />
+      name="keyword"
+      content="#YoProgramo, argentina programa, full stack developer, licenciado en seguridad publica"/>
+    
+    <meta name="author" content="Guido H. Insfran Duarte"> 
 
     <meta http-equiv="refresh" content="600" />
 
@@ -31,13 +34,13 @@
         <!--Logo ArgProg-->
         <a
         href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento/argentina-programa"
-        target="blank"
-      >
+        target="blank">
         <img
           id="iconoArgPrograma"
           src="img/ArgentinaPrograma.ico"
-          alt="Icono ArgPrograma"
-      /></a>
+          alt="Icono ArgPrograma"/></a>
+      <h6 id="curso">#YoProgramo</h6>
+      
       <!--Redes sociales--><!--Icono en vez del nombre-->
       <a href="https://www.instagram.com/guidohid/" target="blank"
       ><img
@@ -56,6 +59,18 @@
       </div>
       </div>
     </header>
+    <br>
+    <div>
+      <span class="nav-bar" id="btnmenu" ><i class="fas fa-bars"></i>Menú</span>
+      <nav class="main-nav">
+          <ul class="menu" id="menu" >
+            <li class="menu__item"><a href="" class="menu__link">Acerca</a></li>
+            <li class="menu__item"><a href="" class="menu__link">Estudios</a></li>
+            <li class="menu__item"><a href="" class="menu__link">Contacto</a></li>
+          </ul>
+      </nav>
+      <script src="menu.js"></script>
+    </div>
 
     <div id="banner">
       <img src="img/Banner2.png" alt="Banner" id="img_banner" />
@@ -152,11 +167,6 @@
           <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a
           >, 2019, Buenos Aires
         </li>
-        <li>
-          Cursando último año de Licenciatura en Investigacion Judicial -
-          <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a
-          >, Buenos Aires
-        </li>
         <br />
 
         <h4>Capacitaciones</h4>
@@ -179,7 +189,7 @@
     </div>
     <br />
 
-    <div align="center">
+    <div class="centrados">
       <h3>Sitio de trabajo</h3> <br>
       <iframe
         id="Mapa"
@@ -191,10 +201,8 @@
       <footer>
         <a
           href="https://www.google.com/maps/place/Retiro,+CABA/@-34.5893799,-58.3855645,15z/data=!3m1!4b1!4m5!3m4!1s0x95bccab6fb9fda31:0xc63b4bf37c945929!8m2!3d-34.5896061!4d-58.3802473"
-          target="blank"
-        >
-          <small>Abrir en Google Maps</small></a
-        >
+          target="blank">
+          <small>Abrir en Google Maps</small></a>
       </footer>
       <br />
     </div>
