probando typescript, crea archivo Js

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
       <section>
         <img src="img/FotoPerfil.png" 
         alt="Foto Perfil"
-        id="fotoPerfil"/>
+        id="fotoPerfil"
+        />
       </section>
 
       <section class="sangria">
@@ -97,7 +98,7 @@
             alt="Icono Telegram"
             id="icono"
           />
-          376-4-771317
+          376-4-000000
         </address>
       </section>
     </div>
@@ -112,6 +113,10 @@
           >Licenciado en Seguridad Pública, actividad de Análisis Criminal en
           Fuerza de Seguridad para el ámbito de la Seguridad Interior</em
         >
+      </p> <br>
+      <p>
+        Siendo padre de una niña, comenzo mi interes por la informatica y las tecnologias en vistas de afrontar la evolucion e interconexion de muchas areas de la vida, desde el control parental, la administacion de tiempo y el uso de la tecnologia en la educacion, para poder acompañar el dia de mañana a mi hija y no dejarla fuera de saberes futuros naturalizados de las nuevas generaciones. <br>
+        Tambien en mi propia area de trabajo, es indispensable la introduccion a la globalizacion y usos de internet, redes sociales y ofimatica, la actualizacion en el área de prevencion para seguridad de la comunidad debiera ser un requisito en la formacion academica relacionada.
       </p>
     </div>
     <br />
